--- a/assets/css/styles-astronaut.css
+++ b/assets/css/styles-astronaut.css
@@ -46,12 +46,12 @@ a:visited {
     -o-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
     color: #fefefe;
-    background-color: #e65b38;
+    background-color: #ffad02;
 }
 
 .btn:hover {
     color: #fefefe;
-    background-color: #e65b38;
+    background-color: #ffad02;
 }
 
 .btn i {
