--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13297,3 +13297,11 @@ figcaption {
     font-style: normal;
     font-display: swap;
 }
+.nocopy {
+ -webkit-touch-callout: none;
+ -webkit-user-select: none;
+ -khtml-user-select: none;
+ -moz-user-select: none;
+ -ms-user-select: none;
+ user-select: none;
+}
